// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Delete denormalization denormalizes deleted entities as undefined (direct) 1`] = `
[
  [
    {
      "data": undefined,
    },
  ],
  true,
  false,
]
`;

exports[`Delete denormalization denormalizes deleted entities as undefined (direct) 2`] = `
[
  [
    {
      "data": undefined,
    },
  ],
  true,
  false,
]
`;

exports[`Delete denormalization denormalizes deleted entities as undefined (direct) 3`] = `
[
  [
    {
      "data": undefined,
    },
  ],
  true,
  false,
]
`;

exports[`Delete denormalization denormalizes deleted entities as undefined (direct) 4`] = `
[
  [
    {
      "data": undefined,
    },
  ],
  true,
  false,
]
`;

exports[`Delete denormalization denormalizes deleted entities as undefined (direct) 5`] = `
[
  {
    "data": undefined,
  },
  true,
  true,
]
`;

exports[`Delete denormalization denormalizes deleted entities as undefined (direct) 6`] = `
[
  {
    "data": undefined,
  },
  true,
  true,
]
`;

exports[`Delete denormalization denormalizes deleted entities as undefined (immutable) 1`] = `
[
  Immutable.List [
    Immutable.Map {
      "data": undefined,
    },
  ],
  true,
  false,
]
`;

exports[`Delete denormalization denormalizes deleted entities as undefined (immutable) 2`] = `
[
  Immutable.List [
    Immutable.Map {
      "data": undefined,
    },
  ],
  true,
  false,
]
`;

exports[`Delete denormalization denormalizes deleted entities as undefined (immutable) 3`] = `
[
  Immutable.List [
    Immutable.Map {
      "data": undefined,
    },
  ],
  true,
  false,
]
`;

exports[`Delete denormalization denormalizes deleted entities as undefined (immutable) 4`] = `
[
  Immutable.List [
    Immutable.Map {
      "data": undefined,
    },
  ],
  true,
  false,
]
`;

exports[`Delete denormalization denormalizes deleted entities as undefined (immutable) 5`] = `
[
  Immutable.Map {
    "data": undefined,
  },
  true,
  true,
]
`;

exports[`Delete denormalization denormalizes deleted entities as undefined (immutable) 6`] = `
[
  Immutable.Map {
    "data": undefined,
  },
  true,
  true,
]
`;

exports[`Delete normalization normalizes already processed entities 1`] = `
{
  "entities": {},
  "entityMeta": {},
  "indexes": {},
  "result": "1",
}
`;

exports[`Delete normalization normalizes an object 1`] = `
{
  "entities": {
    "User": {
      "1": Symbol(ENTITY WAS DELETED),
    },
  },
  "entityMeta": {
    "User": {
      "1": {
        "date": 1557831718135,
        "expiresAt": Infinity,
        "fetchedAt": 0,
      },
    },
  },
  "indexes": {},
  "result": "1",
}
`;

exports[`Delete normalization should throw a custom error if data does not include pk 1`] = `
"Missing usable primary key when normalizing response.

  This is likely due to a malformed response.
  Try inspecting the network response or fetch() return value.
  Or use debugging tools: https://resthooks.io/docs/guides/debugging
  Learn more about schemas: https://resthooks.io/docs/api/schema

  Delete(Entity): Delete(MyEntity)
  Value: {
  "secondthing": "hi"
}
  "
`;
